--- a/components/ProductsSection.module.css
+++ b/components/ProductsSection.module.css
@@ -340,6 +340,9 @@
   flex-shrink: 0;
   display: inline-block;
   vertical-align: middle;
+  margin-top: -4px;
+  margin-right: 0px;
+
 }
 
 .productDescription {
